--- a/JiaoBaoYun-hb/html/mine/about.html
+++ b/JiaoBaoYun-hb/html/mine/about.html
@@ -10,7 +10,26 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<style type="text/css"></style>
+		<style type="text/css">
+			.banquan {
+				bottom: 20px;
+			}
+			.companyName {
+				bottom: 0px;
+			}
+			.aboutP{
+				position: absolute;
+				left: 0px;
+				text-align: center;
+				width: 100%;
+				padding: 0px;
+				margin: 0px;
+				margin: 0px 0px;
+				font-size: 13px;
+				color: #B7B7B7;
+				font-family:"微软雅黑";
+			}
+		</style>
 	</head>
 
 	<body>
@@ -18,7 +37,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">关于</h1>
 		</header>
-		<div class="mui-content" style="background-color: white;bottom: 0px;">
+		<div class="mui-content mui-fullscreen" style="background-color: white;bottom: 0px;">
 			<div style="text-align: center;padding-top: 10px;"><img src="../../image/mine/jiaobaoyun.png" style="width:50%;height: 50%;"></img>
 			</div>
 			<h5 id="version" style="text-align: center;">教宝云</h5>
@@ -41,6 +60,8 @@
 					</a>
 				</li>
 			</ul>
+			<a class="banquan aboutP">Copyright&copy;2006-2017</a>
+			<a class="companyName aboutP">山东金视野教育科技股份有限公司</a>
 
 			<!--<h4 style="text-align: center;">软件介绍</h4>
 			<p style="font-size: 14px;margin:10px ;">     教宝云为全新面貌升级，通过专业的技术服务团队，为学校及家长等提供家校互联产品及服务。此产品的主要功能有：
