--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -68,16 +68,22 @@
 				events.defaultLogin(function(data) {
 					console.log("自动登录获取的值1111：" + JSON.stringify(data));
 					if(data.value == 1) {
-						events.openNewWindow('index.html');
+						events.preload('index.html');
+						setTimeout(function() {
+							events.openNewWindow('index.html');
+						}, 2000);
 						//判断是否需要更新
 						setTimeout(appUpdate.updateApp, 5000);
 					} else if(data.value == -1) { //登录失败,用游客登录
 						defalutPerson();
 						events.defaultLogin(function(data) {
 							if(data.value == 1) {
-								events.openNewWindow('index.html');
+								events.preload('index.html');
+								setTimeout(function() {
+									events.openNewWindow('index.html');
+								}, 2000);
 							} else if(data.value == -1) { //登录失败
-								
+
 							}
 						});
 					}
