--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -82,24 +82,24 @@
 				console.log('tempInfo.uid:' + tempInfo.uid);
 				document.getElementById('change_phoneNum').innerText = tempInfo.uid;
 				// 获取支付通道
-				//				plus.payment.getChannels(function(channels) {
-				//					console.log('channels=' + JSON.stringify(channels));
-				//					alert("通道="+JSON.stringify(channels));
-				//					for (var i in channels) {
-				//						var temp = channels[i];
-				//						if (temp.id == 'alipay') {
-				//							aliChannel = temp;
-				//						} else if (temp.id == 'wxpay') {
-				//							wxChannel = temp;
-				//						}
-				//					}
-				//				}, function(e) {
-				//					alert("获取支付通道失败：" + e.message);
-				//				});
+//								plus.payment.getChannels(function(channels) {
+//									console.log('channels=' + JSON.stringify(channels));
+//									alert("通道="+JSON.stringify(channels));
+//									for (var i in channels) {
+//										var temp = channels[i];
+//										if (temp.id == 'alipay') {
+//											aliChannel = temp;
+//										} else if (temp.id == 'wxpay') {
+//											wxChannel = temp;
+//										}
+//									}
+//								}, function(e) {
+//									alert("获取支付通道失败：" + e.message);
+//								});
 				//点击绑定手机cell，弹出
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-					//					console.log("微信");
-					//					pay('wxpay');
+//										console.log("ali");
+//										pay('alipay');
 					var index = this.id.replace('li', '');
 					console.log('index:' + index);
 					if(index == '0') {
@@ -128,7 +128,7 @@
 				//				events.addTap('yinsi', function() {
 				//					mui.toast('此功能暂未开放');
 				//				});
-				var ALIPAYSERVER = 'http://demo.dcloud.net.cn/helloh5/payment/alipay.php?total=1';
+				var ALIPAYSERVER = 'http://jsypay.jiaobaowang.net/jsypay/alipay/sys/aliappserver.ashx';
 				//		var WXPAYSERVER='http://demo.dcloud.net.cn/helloh5/payment/wxpay.php?total=1';
 				var WXPAYSERVER = 'https://jsypay.jiaobaowang.net/example/AppServer.aspx?body="教宝云-会员"&attach="附件数据"&total_fee=201';
 				//2. 发起支付请求
