跟接口配对

--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -199,6 +199,7 @@
 				postData.classId = groupInfo.classId;
 				postData.msgContent = tempText;
 				postData.encType = TAs.encType;
+				postData.encLen=0;
 				postData.encAddr = TAs.encAddr;
 				postData.encImg = TAs.encImg;
 				postData.teacherId = parseInt(groupInfo.userId);
