1、修改展现样式 2、发布动态加上传录像

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -297,6 +297,7 @@
 						})
 					}, function(errData) {
 						console.log(errData.code);
+						mui.toast(errData.message);
 					})
 				});
 				events.addTap('get_record', function() {
