--- a/JiaoBaoYun-hb/html/index/firstPage.html
+++ b/JiaoBaoYun-hb/html/index/firstPage.html
@@ -16,6 +16,7 @@
 		<script src="../../js/utils/app-update.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
+			var indexReady=false;
 			mui.init({
 				statusBarBackground: '#13b7f6'
 			});
@@ -27,7 +28,9 @@
 					defalutPerson();
 				}
 				document.addEventListener("netchange", wainshow, false);
-
+				window.addEventListener("indexReady",function(){
+					indexReady=true;
+				})
 				function wainshow() {
 					var personal = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 					if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
@@ -69,9 +72,11 @@
 					console.log("自动登录获取的值1111：" + JSON.stringify(data));
 					if(data.value == 1) {
 						events.preload('index.html');
-						setTimeout(function() {
-							events.openNewWindow('index.html');
-						}, 2000);
+						events.showWaiting();
+						showIndex();
+//						setTimeout(function() {
+//							events.openNewWindow('index.html');
+//						}, 2000);
 						//判断是否需要更新
 						setTimeout(appUpdate.updateApp, 5000);
 					} else if(data.value == -1) { //登录失败,用游客登录
@@ -90,6 +95,14 @@
 					//android更新app
 				});
 			});
+			function showIndex(){
+				if(indexReady){
+					events.closeWaiting();
+					plus.webview.getWebviewById("index.html").show("slide-in-right",300);
+				}else{
+					setTimeout(showIndex,500);
+				}
+			}
 			//默认值
 			function defalutPerson() {
 				var model_area = {
