笔记发布时增加音频的显示

--- a/JiaoBaoYun-hb/html/utils/record_audio.html
+++ b/JiaoBaoYun-hb/html/utils/record_audio.html
@@ -9,14 +9,13 @@
 		<meta name="description" content="录制音频" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<style>
 			.mui-content {
 				text-align: center;
 				/*visibility: hidden;*/
 			}
 
-			.icon-yuyin2 {
+			.mui-icon-mic {
 				color: #808080;
 				/*background-color: rgba(0, 0, 0, 0.3);*/
 			}
@@ -140,7 +139,7 @@
 		</header>
 		<div id="content" class="mui-content">
 			<canvas id="canvas"></canvas>
-			<span id="yuyin" class="mui-icon iconfont icon-yuyin2"></span>
+			<span id="yuyin" class="mui-icon mui-icon-mic"></span>
 			<div id="time">00:00</div>
 			<div id="bottom">
 				<button id="redCircle" type="button" class="mui-btn mui-btn-red">
