增加音频的参数

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -173,7 +173,8 @@
 					noteType: '1', //信息类型,1云笔记2个人空间
 					userIds: '[]', //推送用户ID
 					pubScopes: '[1]', //1 家校圈 必选,2 展现 可选例如[1,2]
-					pubArea: '' //具体到市级代码
+					pubArea: '', //具体到市级代码
+					encLen: 0 //音视频时长
 				};
 
 				postDataPro_addUserSpace(comData, wd, function(data) {
