--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -22,7 +22,7 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 id="workPage-title" class="mui-title display-none">我的作业</h1>
-		    <div id="workPage-roles" class="switch-mine ">
+		    <div id="workPage-roles" class="switch-mine display-none">
 		        <div class="switch-handle-mine"></div>
 		    </div>
 		    <!--更多按钮-->
