点赞图标后面空白太大

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -231,7 +231,7 @@
 
 				var textView = document.getElementById('input-content');
 				var tempText = Trim(textView.value);
-				console.log('textView.value===' + tempText)
+				
 				if(!tempText || tempText == '') {
 					mui.toast('请输入内容');
 					return;
@@ -239,8 +239,9 @@
 					mui.toast('不能超过2000字');
 					return;
 				} else {
-					tempText = replaceAllBL(tempText)
+//					tempText = replaceAllBL(tempText)
 				}
+				console.log(tempText.length)
 				var pubScopes;
 				var chenckBox1 = document.getElementById('zone')
 				var chenckBox2 = document.getElementById('show')
