--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -73,65 +73,53 @@
 			//存储个人信息
 			var tempInfo;
 
-			var wxChannel = null; // 微信支付
-			var aliChannel = null; // 支付宝支付
-			var channel = null;
+//			var wxChannel = null; // 微信支付
+//			var aliChannel = null; // 支付宝支付
+//			var channel = null;
 
 			mui.plusReady(function() {
 				tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 				console.log('tempInfo.uid:' + tempInfo.uid);
 				document.getElementById('change_phoneNum').innerText = tempInfo.uid;
 				// 获取支付通道
-				plus.payment.getChannels(function(channels) {
-					console.log('channels=' + JSON.stringify(channels));
-					alert("通道=" + JSON.stringify(channels));
-					for(var i in channels) {
-						var temp = channels[i];
-						if(temp.id == 'alipay') {
-							aliChannel = temp;
-						} else if(temp.id == 'wxpay') {
-							wxChannel = temp;
-						}
-					}
-				}, function(e) {
-					alert("获取支付通道失败：" + e.message);
-				});
+//				plus.payment.getChannels(function(channels) {
+//					console.log('channels=' + JSON.stringify(channels));
+//					alert("通道=" + JSON.stringify(channels));
+//					for(var i in channels) {
+//						var temp = channels[i];
+//						if(temp.id == 'alipay') {
+//							aliChannel = temp;
+//						} else if(temp.id == 'wxpay') {
+//							wxChannel = temp;
+//						}
+//					}
+//				}, function(e) {
+//					alert("获取支付通道失败：" + e.message);
+//				});
 				//点击绑定手机cell，弹出
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-
 					var index = this.id.replace('li', '');
 					console.log('index:' + index);
 					if(index == '0') {
-						console.log("ali");
-						pay('alipay');
-						//											mui.confirm(tempInfo.uid, '您已绑定手机号', ['取消', '更换'], function(e) {
-						//												var index = e.index;
-						//												switch(index) {
-						//													case 0: //取消
-						//														break;
-						//													case 1: //返回
-						//														//flag为2，表示是更改绑定手机
-						//														events.openNewWindowWithData('../register/register_phoneNumber.html', '2');
-						//					
-						//														break;
-						//												}
-						//											}, 'div');
+//						console.log("ali");
+//						pay('alipay');
+																	mui.confirm(tempInfo.uid, '您已绑定手机号', ['取消', '更换'], function(e) {
+																		var index = e.index;
+																		switch(index) {
+																			case 0: //取消
+																				break;
+																			case 1: //返回
+																				//flag为2，表示是更改绑定手机
+																				events.openNewWindowWithData('../register/register_phoneNumber.html', '2');
+											
+																				break;
+																		}
+																	}, 'div');
 					}
 				});
-				//				window.addEventListener("swiperight", function(e) {
-				//					console.log('侧滑。。。');
-				//                      //默认滑动角度在-45度到45度之间，都会触发右滑菜单，为避免误操作，可自定义限制滑动角度；
-				//                      if (Math.abs(e.detail.angle) < 30) {
-				//                          self.close();
-				//                      }
-				//                  });
-				//隐私
-				//				events.addTap('yinsi', function() {
-				//					mui.toast('此功能暂未开放');
-				//				});
-				var ALIPAYSERVER = 'https://jsypay.jiaobaowang.net/jsypay/alipay/sys/aliappserver.ashx';
-				//		var WXPAYSERVER='http://demo.dcloud.net.cn/helloh5/payment/wxpay.php?total=1';
-				var WXPAYSERVER = 'https://jsypay.jiaobaowang.net/example/AppServer.aspx?body="教宝云-会员"&attach="附件数据"&total_fee=201';
+//				var ALIPAYSERVER = 'https://jsypay.jiaobaowang.net/jsypay/alipay/sys/aliappserver.ashx';
+//				var WXPAYSERVER = 'https://jsypay.jiaobaowang.net/example/AppServer.aspx?body="教宝云-会员"&attach="附件数据"&total_fee=201';
+
 				//2. 发起支付请求
 				function pay(id) {
 					// 从服务器请求支付订单
@@ -152,11 +140,12 @@
 						switch(xhr.readyState) {
 							case 4:
 								if(xhr.status == 200) {
-									alert("PAYSERVER=" + PAYSERVER+','+JSON.stringify(channel));
+									var data = htmldecode(xhr.responseText);
+									alert("PAYSERVER=" + PAYSERVER + ',channel=' + JSON.stringify(channel));
 									alert("获取订单信=" + JSON.stringify(xhr));
-									plus.payment.request(channel, xhr.responseText, function(result) {
+									plus.payment.request(channel, data, function(result) {
 										plus.nativeUI.alert("支付成功！", function() {
-											back();
+											
 										});
 									}, function(error) {
 										console.log('error' + JSON.stringify(error));
@@ -172,11 +161,23 @@
 					}
 					xhr.open('GET', PAYSERVER);
 					xhr.send();
+				};
+
+				function htmlencode(s) {
+					var div = document.createElement('div');
+					div.appendChild(document.createTextNode(s));
+					return div.innerHTML;
+				}
+
+				function htmldecode(s) {
+					var div = document.createElement('div');
+					div.innerHTML = s;
+					return div.innerText || div.textContent;
 				}
 				//修改密码
 				events.addTap('change-passwords', function() {
-					loadURL();
-					//					events.openNewWindowWithData('../register/modify_password.html', '1');
+//					loadURL();
+					events.openNewWindowWithData('../register/modify_password.html', '1');
 				});
 
 				function loadURL() {
@@ -184,8 +185,8 @@
 					//					UIImagePickerController * controller = [
 					//						[UIImagePickerController alloc] init
 					//					];
-					var tempC1 = plus.ios.importClass('UIImagePickerController');
-					var tempC = new tempC1();
+					//					var tempC1 = plus.ios.importClass('UIImagePickerController');
+					//					var tempC = new tempC1();
 					/*设置媒体来源，即调用出来的UIImagePickerController所显示出来的界面，有一下三种来源
 					 typedef NS_ENUM(NSInteger, UIImagePickerControllerSourceType) {
 					     UIImagePickerControllerSourceTypePhotoLibrary,
@@ -193,37 +194,37 @@
 					  UIImagePickerControllerSourceTypeSavedPhotosAlbum
 					 };分别表示：图片列表，摄像头，相机相册*/
 					//					[controller setSourceType: UIImagePickerControllerSourceTypeCamera];
-//					plus.ios.invoke(tempC, 'setSourceType', 'UIImagePickerControllerSourceTypeCamera');
-					tempC.setSourceType('UIImagePickerControllerSourceTypeCamera');
+					//					plus.ios.invoke(tempC, 'setSourceType', 'UIImagePickerControllerSourceTypeCamera');
+					//					tempC.setSourceType('UIImagePickerControllerSourceTypeCamera');
 					// 设置所支持的媒体功能，即只能拍照，或则只能录像，或者两者都可以
 					//					NSString * requiredMediaType = (NSString * ) kUTTypeImage;
 					//					NSString * requiredMediaType1 = (NSString * ) kUTTypeMovie;
-					var tempType = 'kUTTypeMovie';
+					//					var tempType = 'kUTTypeMovie';
 					//					NSArray * arrMediaTypes = [NSArray arrayWithObjects: requiredMediaType, requiredMediaType1, nil];
-					var arrMediaTypes = plus.ios.importClass('NSArray');
-					arrMediaTypes.arrayWithObjects(tempType);
+					//					var arrMediaTypes = plus.ios.importClass('NSArray');
+					//					arrMediaTypes.arrayWithObjects(tempType);
 					//					[controller setMediaTypes: arrMediaTypes];
-//					plus.ios.invoke(tempC, 'setMediaTypes', arrMediaTypes);
-					tempC.setMediaTypes(arrMediaTypes);
+					//					plus.ios.invoke(tempC, 'setMediaTypes', arrMediaTypes);
+					//					tempC.setMediaTypes(arrMediaTypes);
 					// 设置录制视频的质量
 					//					[controller setVideoQuality: UIImagePickerControllerQualityTypeHigh];
-//					plus.ios.invoke(tempC, 'setVideoQuality', 'UIImagePickerControllerQualityTypeHigh');
-//					tempC.setVideoQuality('UIImagePickerControllerQualityTypeHigh');
+					//					plus.ios.invoke(tempC, 'setVideoQuality', 'UIImagePickerControllerQualityTypeHigh');
+					//					tempC.setVideoQuality('UIImagePickerControllerQualityTypeHigh');
 					//设置最长摄像时间
 					//					[controller setVideoMaximumDuration: 10. f];
-//					plus.ios.invoke(tempC, 'setVideoMaximumDuration', 10);
-//					tempC.setVideoMaximumDuration(10);
+					//					plus.ios.invoke(tempC, 'setVideoMaximumDuration', 10);
+					//					tempC.setVideoMaximumDuration(10);
 					// 设置是否可以管理已经存在的图片或者视频
 					//					[controller setAllowsEditing: YES];
 					// 设置代理
 					//					[controller setDelegate: self];
 					//					[self presentViewController: controller animated: YES completion: nil];
-//					var wv = plus.ios.currentWebview();
-//					var main = plus.android.runtimeMainActivity();
-//					var main = plus.ios.runtimeMainActivity();
-//					main.presentViewControlleranimatedcompletion(tempC, true, null);
-//					UINavigationController * viewController = (UINavigationController*)view.reactViewController;
-//					[viewController.navigationController pushViewController:[AiMeiViewController new] animated:YES];
+					//					var wv = plus.ios.currentWebview();
+					//					var main = plus.android.runtimeMainActivity();
+					//					var main = plus.ios.runtimeMainActivity();
+					//					main.presentViewControlleranimatedcompletion(tempC, true, null);
+					//					UINavigationController * viewController = (UINavigationController*)view.reactViewController;
+					//					[viewController.navigationController pushViewController:[AiMeiViewController new] animated:YES];
 				}
 				//退出
 				events.addTap('quit', function() {
